# ChefPanda

./: .gitignore  README.md  ROADMAP.md  package-lock.json
apps/: package-lock.json
backend/api/api/: settings.py
front/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
front/src/: App.tsx  global.css
front/src/components/Header/: Header.tsx
front/src/components/Home/: Home.tsx
front/src/components/payment/: PaymentOptions.tsx
frontend/app/: _layout.tsx  about.tsx  index.tsx
mobile/: app.json  package-lock.json  package.json  tailwind.config.js
mobile/app/: +not-found.tsx  _layout.tsx
mobile/app/(tabs)/: index.tsx
recipe/: package-lock.json
recipe/public/: index.html
recipe/src/: App.js
recipe/src/components/ui/: SleepWarningModal.jsx
recipe/src/lib/: api.js
services/: requirements.txt
services/tests/: test_scrape_unit.py
services/youtube-parser/: main.py  pyproject.toml  recipe_gen.py  type.py  youtube.py  yt_scrape.py  yt_transcript.py
services/youtube-parser/prompts/: recipe_system.txt
services/youtube_parser/: main.py  recipe_gen.py  requirements.txt  type.py  yt_scrape.py
services/youtube_parser/prompts/: recipe_extraction.txt
